--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
 						<li class="nav-item @@contact__active">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						<li class="nav-item @@contact__active">
+							<a class="nav-link" href="healthbot.html">Healthbot</a>
+						</li>
 					</ul>
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item ml-4">
-							<a class="nav-link phone" href="tel:+(21)-234-9999"><span class="fa fa-phone"></span> +(21)-234-9999</a>
+							<a class="nav-link phone" href="tel:+(91)-934-9999"><span class="fa fa-phone"></span> +(91)-934-9999</a>
 						</li>
 						 <li class="nav-item" title="Search"><a href="#search" class="search-search nav-link"><span class="fa fa-search mr-2" aria-hidden="true"></span></a></li>
 				<!-- search -->
